--- a/DressApp/package.json
+++ b/DressApp/package.json
@@ -21,8 +21,12 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular2-materialize": "^15.1.3",
     "angularjs-datepicker": "^2.1.23",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
+    "jquery": "^2.2.4",
+    "materialize-css": "^0.100.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
